; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/most/dim2/extr_hal.c_sync_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/most/dim2/extr_hal.c_sync_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dim_channel = type { i64, i32, i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dim_channel*, i32, i32)* @sync_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sync_init(%struct.dim_channel* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.dim_channel*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.dim_channel* %0, %struct.dim_channel** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.dim_channel*, %struct.dim_channel** %4, align 8
  %8 = getelementptr inbounds %struct.dim_channel, %struct.dim_channel* %7, i32 0, i32 4
  %9 = call i32 @state_init(i32* %8)
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.dim_channel*, %struct.dim_channel** %4, align 8
  %12 = getelementptr inbounds %struct.dim_channel, %struct.dim_channel* %11, i32 0, i32 3
  store i32 %10, i32* %12, align 8
  %13 = load %struct.dim_channel*, %struct.dim_channel** %4, align 8
  %14 = getelementptr inbounds %struct.dim_channel, %struct.dim_channel* %13, i32 0, i32 2
  store i64 0, i64* %14, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.dim_channel*, %struct.dim_channel** %4, align 8
  %17 = getelementptr inbounds %struct.dim_channel, %struct.dim_channel* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 8
  %18 = load %struct.dim_channel*, %struct.dim_channel** %4, align 8
  %19 = getelementptr inbounds %struct.dim_channel, %struct.dim_channel* %18, i32 0, i32 0
  store i64 0, i64* %19, align 8
  ret void
}

declare dso_local i32 @state_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
